@@ -83,8 +83,9 @@ This command adds dynamic help to the given <i>widget</i>.
 
     <DL><DT><A NAME="add-variable"><B>-variable</B></A></DT>
     <DD>
-    	Specifies a variable name that contains the help string to
-	be displayed.
+    	Specifies a variable name to which the help string will be
+        written.  Some other widget (e.g., a status bar) is
+        responsible for displaying this variable.
     </DD>
     </DL>
 
